<resources>
    <string name="app_name">Tip Time</string>
    <string name="Cost_Of_Service">Cost of service: </string>
    <string name="How_Service">How was the service?</string>
    <string name="Amazing">Amazing (20%)</string>
    <string name="Good">Good (18%)</string>
    <string name="OK">OK (15%)</string>
    <string name="Round">Round up tip?</string>
    <string name="Calculate">Calculate</string>
    <string name="Amount">Tip Amount: %s</string>
</resources>